--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^3.0.1"
+  },
+   "engines": {
+    "node": ">=14.20.1"
   }
 }
