--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
@@ -29,7 +30,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^3.0.1"
   },
-   "engines": {
+  "engines": {
     "node": ">=14.20.1"
   }
 }
